--- a/src/Page/CreatEmployee/CreatEmployee.module.scss
+++ b/src/Page/CreatEmployee/CreatEmployee.module.scss
@@ -6,3 +6,9 @@
     width: 1000px;
     background-color: #fff;
 }
+// .scrollable {
+//     overflow: auto;
+//     width: 70px; /* adjust this width depending to amount of text to display */
+//     height: 80px; /* adjust height depending on number of options to display */
+//     border: 1px silver solid;
+// }
