--- a/src/Page/TrashEmployee/TrashEmployee.module.scss
+++ b/src/Page/TrashEmployee/TrashEmployee.module.scss
@@ -1,5 +1,7 @@
 .trash_container {
     margin-top: 70px;
+    width: 1024px;
+    margin: 100px auto 0 auto;
     border-radius: 5px;
     padding: 10px 0;
     background-color: #fff;
