--- a/src/Components/Layout/Search/Search.module.scss
+++ b/src/Components/Layout/Search/Search.module.scss
@@ -5,7 +5,7 @@
     margin-left: 40px;
     margin-top: 8px;
     padding-left: 12px;
-    background-color: #333333;
+    background-color: #fff;
     text-align: left;
     display: flex;
     border: 1px solid #4d4d4d;
@@ -14,7 +14,7 @@
 
     input {
         flex: 1;
-        color: #828282;
+        color: #222;
         outline: none;
         padding-bottom: 2px;
         font-size: 13px;
