--- a/src/Page/EmployeeCategory/EmployeeCategory.module.scss
+++ b/src/Page/EmployeeCategory/EmployeeCategory.module.scss
@@ -1,6 +1,6 @@
 .container {
-    width: 1060px;
-    margin-top: 100px;
+    width: 1024px;
+    margin: 100px auto 0 auto;
 }
 .container_content {
     width: 100%;
