--- a/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
+++ b/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
@@ -52,9 +52,14 @@
     flex-direction: column;
     margin-top: 10px;
 
+    .info_text {
+        background-color: #e6e6fa;
+        border-radius: 5px;
+    }
     .input_text {
+        width: 90%;
         padding: 10px 20px;
-        background: #e6e6fa;
+        background-color: #e6e6fa;
         border: none;
         outline: none;
         border-radius: 5px;
@@ -77,4 +82,10 @@
     align-items: center;
     text-align: center;
     margin-top: 30px;
+}
+.box_tooltip {
+    background-color: #222;
+    color: #fff;
+    padding: 10px 5px;
+    border-radius: 5px;
 }
