redesign Web UI

--- a/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -2,8 +2,8 @@
     // Node ở Đây Đã
     width: 100%;
     overflow: hidden;
-    height: 800px;
-    background: linear-gradient(to right, #659999, #f4791f);
+    height: 2200px;
+    background: #fff;
     line-height: 1.428571429;
     border: none;
     margin: 0 auto;
