--- a/src/Page/CreatEmployee/CreatEmployee.module.scss
+++ b/src/Page/CreatEmployee/CreatEmployee.module.scss
@@ -1,10 +1,6 @@
 .create_film {
     width: 1000px;
-    position: fixed;
-    left: 50%;
-    top: 15%;
-    right: 50%;
-    transform: translateX(-50%);
+    margin: 80px auto;
     padding-bottom: 20px;
     border-radius: 5px;
     background-color: #fff;
