--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -1,14 +1,17 @@
 .container {
-    width: 1024px;
-    margin: 100px auto 0 auto;
+    width: 1260px;
+    margin: 62px auto 0 auto;
 }
 .container_content {
-    width: 100%;
+    width: 1080px;
+    border-top: 1px solid #ccc;
     padding-left: 0;
     padding-right: 0;
 }
 .Row_content {
     width: 100%;
+    padding-left: 40px;
+    margin-top: 40px;
     margin-left: 0;
     margin-right: 0;
 }
@@ -17,4 +20,48 @@
     position: relative;
     left: 50%;
     transform: translateX(-9%);
+}
+
+// Popular movie
+.Popular {
+    width: 100%;
+    height: 550px;
+    margin-bottom: 40px;
+    img {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        object-fit: cover;
+    }
+    box-shadow: 0 0 5px #aaaaaaaa;
+}
+.infor {
+    position: absolute;
+    top: 30%;
+    left: 12%;
+    padding: 10px 5px;
+
+    .name {
+        font-weight: 600;
+        color: #fff;
+    }
+    .description {
+        color: #ccc;
+    }
+}
+.btn_move {
+    display: block;
+    margin-top: 40px;
+    color: #333;
+    padding: 10px 20px;
+    width: 150px;
+    border-radius: 30px;
+    background-color: #ffcc00;
+    .icon_play {
+        margin-left: 5px;
+    }
+    cursor: pointer;
+}
+.btn_move:hover {
+    color: #333;
 }
