--- a/src/Page/MovieItem/MovieItem.module.scss
+++ b/src/Page/MovieItem/MovieItem.module.scss
@@ -1,41 +1,45 @@
 .col_item {
-    height: 135px;
+    margin-left: -5px;
+    margin-right: -5px;
+    height: 440px;
     margin-bottom: 10px;
 }
 .block_data {
-    position: relative;
-    width: 240px;
-    border-radius: 5px;
-    overflow: hidden;
-    padding-left: -15px;
-    padding-right: -15px;
+    display: block;
+    width: 250px;
+    padding-left: -10px;
+    padding-right: -10px;
     height: 100%;
+    box-shadow: 0 0 5px #aaaaaaaa;
+}
+.block_data:hover {
+    box-shadow: 0 0 10px #aaaaaaaa;
 }
 .Link_image {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 360px;
     overflow: hidden;
 }
 .info_movie {
     display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    height: 80px;
     background-color: transparent;
-    background-image: linear-gradient(to bottom right, transparent, #000);
-    padding: 4px 8px;
+    border: 1px solid #eee;
+    box-shadow: 0 0 5px #aaaaaaaa;
+    padding: 15px 25px;
 }
 .title_movie {
     font-size: 16px;
-    color: #eee;
+    color: #333;
     font-weight: 600;
     text-decoration: none;
+    margin-bottom: 0;
 }
 .description_movie {
-    color: #eee;
+    color: #aaaaaa;
     font-size: 14px;
+    margin-top: 5px;
 }
 .image_movie {
     width: 100%;
