--- a/src/Page/UpdateFilm/UpdateFilm.module.scss
+++ b/src/Page/UpdateFilm/UpdateFilm.module.scss
@@ -1,6 +1,6 @@
 .update_film {
-    position: fixed;
     width: 1000px;
+    margin: 0 auto;
     margin-top: 90px;
     padding: 10px 0;
     background-color: #fff;
