--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -1,19 +1,30 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .container {
-    width: 1260px;
+    max-width: 1200px;
     margin: 62px auto 0 auto;
 }
-.container_content {
-    width: 1080px;
-    border-top: 1px solid #ccc;
-    padding-left: 0;
-    padding-right: 0;
-}
-.Row_content {
+.item_movie {
+    text-decoration: none;
+    display: block;
     width: 100%;
-    padding-left: 40px;
-    margin-top: 40px;
-    margin-left: 0;
-    margin-right: 0;
+    height: 544px;
+    box-shadow: 0 0 5px #aaaaaaaa;
+}
+.item_movie:hover {
+    box-shadow: 0 0 20px #aaaaaaaa;
+}
+.item_image {
+    width: 100%;
+    height: 423px;
+    .image_movie {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 .Pagination_page {
     margin-top: 10px;
@@ -27,7 +38,7 @@
     width: 100%;
     height: 550px;
     margin-bottom: 40px;
-    img {
+    .image_popular {
         width: 100%;
         height: 100%;
         position: relative;
@@ -65,3 +76,92 @@
 .btn_move:hover {
     color: #333;
 }
+.Container_movie {
+    width: 100%;
+    display: block;
+    padding: 0;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.List-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+// @media (max-width: 576px) {
+//     .Container_movie {
+//         margin: 0 auto;
+//     }
+//     .List-item {
+//         display: flex;
+//         flex-wrap: wrap;
+//     }
+//     .Movie-item {
+//         flex: 0 0 100%;
+//         max-width: 100%;
+//         padding-left: 20px;
+//         padding-right: 20px;
+//     }
+// }
+// @media (min-width: 740px) and (max-width: 1112px) {
+//     .Movie-item {
+//         display: block;
+//         padding-left: 8px;
+//         padding-right: 8px;
+//         flex: 0 0 50%;
+//         max-width: 50%;
+//     }
+//     .List-item {
+//         margin-left: -8px;
+//         margin-right: -8px;
+//     }
+// }
+
+// @media (min-width: 1113px) {
+//     .Container_movie.wide {
+//         margin: 0 auto;
+//     }
+//     .List-item {
+//         margin-left: -12px;
+//         margin-right: -12px;
+//     }
+//     .Movie-item {
+//         display: block;
+//         padding-left: 12px;
+//         padding-right: 12px;
+//         flex: 0 0 25%;
+//         max-width: 25%;
+//     }
+// }
+// // @media (min-width: 740px) and (max-width: 1023px) {
+// //     .wide {
+// //         width: 644px;
+// //     }
+// //     .List-item {
+// //         margin-left: -8px;
+// //         margin-right: -8px;
+// //     }
+// //     .Movie-item {
+// //         display: block;
+// //         padding-left: 8px;
+// //         padding-right: 8px;
+// //         flex: 0 0 50%;
+// //         max-width: 50%;
+// //     }
+// // }
+
+// @media (min-width: 1024px) and (max-width: 1239px) {
+//     .wide {
+//         width: 984px;
+//     }
+//     .wide.List-item {
+//         margin-left: -12px;
+//         margin-right: -12px;
+//     }
+//     .wide.Movie-item {
+//         flex: 0 0 25%;
+//         max-width: 25%;
+//         margin-left: 12px;
+//         margin-right: 12px;
+//     }
+// }
