--- a/src/Components/Layout/Search/Search.module.scss
+++ b/src/Components/Layout/Search/Search.module.scss
@@ -100,3 +100,9 @@
         transform: translateY(-50%) rotate(360deg);
     }
 }
+
+@media screen and (max-width: 1080px) {
+    .search {
+        display: none;
+    }
+}
