--- a/src/Components/SearchVideoItem/SearchVideoItem.module.scss
+++ b/src/Components/SearchVideoItem/SearchVideoItem.module.scss
@@ -4,34 +4,42 @@
     align-items: center;
     margin-bottom: 10px;
     overflow: hidden;
-}
-.thumbnail_video {
-    width: 100px;
-    height: 50px;
-    margin-right: 10px;
-    object-fit: cover;
-    animation: fadeIn ease-in-out 0.2;
 
-    &:hover {
+    &:hover .thumbnail_video {
         transform: scale(1.1);
     }
+    &:hover .description {
+        color: #008080;
+    }
+}
+.image_item {
+    width: 90px;
+    height: 50px;
+    overflow: hidden;
+}
+.thumbnail_video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.2s ease-in-out;
 }
 
 @keyframes fadeIn {
     from {
-        opacity: 0;
+        transform: scale(1);
     }
     to {
-        opacity: 1;
+        transform: scale(1.1);
     }
 }
 
 .info_video {
-    width: 190px;
-    float: left;
+    position: relative;
+    left: 10px;
 }
 .name {
     font-size: 13px;
+    color: #333;
     font-family: 'Open Sans', sans-serif;
     margin-bottom: 3px;
     margin-top: -3px;
@@ -41,5 +49,6 @@
     white-space: nowrap;
 }
 .description {
+    color: #808080;
     font-size: 11px;
 }
