--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -7,31 +7,6 @@
     max-width: 1200px;
     margin: 62px auto 0 auto;
 }
-.item_movie {
-    text-decoration: none;
-    display: block;
-    width: 100%;
-    height: 544px;
-    box-shadow: 0 0 5px #aaaaaaaa;
-}
-.item_movie:hover {
-    box-shadow: 0 0 20px #aaaaaaaa;
-}
-.item_image {
-    width: 100%;
-    height: 423px;
-    .image_movie {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-.Pagination_page {
-    margin-top: 10px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-9%);
-}
 
 // Popular movie
 .Popular {
@@ -76,92 +51,128 @@
 .btn_move:hover {
     color: #333;
 }
-.Container_movie {
-    width: 100%;
+
+// Movie Item
+.item_movie {
+    text-decoration: none;
     display: block;
-    padding: 0;
-    max-width: 1200px;
-    margin: 0 auto;
+    width: 100%;
+    height: 544px;
+    box-shadow: 0 0 5px #aaaaaaaa;
 }
-.List-item {
+.item_movie:hover {
+    box-shadow: 0 0 20px #aaaaaaaa;
+}
+.item_movie:hover .image_movie {
+    transform: scale(1.1);
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.item_image {
+    width: 100%;
+    height: 423px;
+    overflow: hidden;
+    .image_movie {
+        width: 100%;
+        height: 100%;
+        transition: all 0.2s ease-in-out;
+        object-fit: cover;
+    }
+}
+
+.infor_item-movie {
+    padding: 24px;
+    .title_movie-item {
+        font-size: 18px;
+        font-weight: 700;
+        width: 120px;
+        white-space: nowrap;
+        -webkit-line-clamp: 1; /* số dòng hiển thị */
+        -webkit-box-orient: horizontal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: #333;
+        margin-bottom: 0;
+        line-height: 18px;
+    }
+    .actor_movie-item {
+        font-size: 14px;
+        color: #aaaaaa;
+        font-weight: 500;
+        line-height: 16px;
+    }
+}
+
+// Time and Stars
+.time_zone-item {
     display: flex;
-    flex-wrap: wrap;
+    position: relative;
+    padding-top: 10px;
+    padding-left: 2px;
+    align-items: center;
+
+    .all_block-zone {
+        display: flex;
+
+        .time_item {
+            display: flex;
+            align-items: center;
+            .clock_icons {
+                color: #aaaaaa;
+                margin-right: 4px;
+            }
+
+            .time {
+                margin-top: 2px;
+                font-size: 14px;
+                color: #aaaaaa;
+                font-weight: 550;
+            }
+        }
+    }
+
+    .stars_movie-item {
+        display: flex;
+        padding-left: 16px;
+        align-items: center;
+
+        .star_icon {
+            font-size: 12px;
+            color: #ffcc00;
+        }
+    }
+    .next_icon {
+        position: absolute;
+        right: -12px;
+        font-size: 20px;
+    }
 }
 
-// @media (max-width: 576px) {
-//     .Container_movie {
-//         margin: 0 auto;
-//     }
-//     .List-item {
-//         display: flex;
-//         flex-wrap: wrap;
-//     }
-//     .Movie-item {
-//         flex: 0 0 100%;
-//         max-width: 100%;
-//         padding-left: 20px;
-//         padding-right: 20px;
-//     }
-// }
-// @media (min-width: 740px) and (max-width: 1112px) {
-//     .Movie-item {
-//         display: block;
-//         padding-left: 8px;
-//         padding-right: 8px;
-//         flex: 0 0 50%;
-//         max-width: 50%;
-//     }
-//     .List-item {
-//         margin-left: -8px;
-//         margin-right: -8px;
-//     }
-// }
-
-// @media (min-width: 1113px) {
-//     .Container_movie.wide {
-//         margin: 0 auto;
-//     }
-//     .List-item {
-//         margin-left: -12px;
-//         margin-right: -12px;
-//     }
-//     .Movie-item {
-//         display: block;
-//         padding-left: 12px;
-//         padding-right: 12px;
-//         flex: 0 0 25%;
-//         max-width: 25%;
-//     }
-// }
-// // @media (min-width: 740px) and (max-width: 1023px) {
-// //     .wide {
-// //         width: 644px;
-// //     }
-// //     .List-item {
-// //         margin-left: -8px;
-// //         margin-right: -8px;
-// //     }
-// //     .Movie-item {
-// //         display: block;
-// //         padding-left: 8px;
-// //         padding-right: 8px;
-// //         flex: 0 0 50%;
-// //         max-width: 50%;
-// //     }
-// // }
-
-// @media (min-width: 1024px) and (max-width: 1239px) {
-//     .wide {
-//         width: 984px;
-//     }
-//     .wide.List-item {
-//         margin-left: -12px;
-//         margin-right: -12px;
-//     }
-//     .wide.Movie-item {
-//         flex: 0 0 25%;
-//         max-width: 25%;
-//         margin-left: 12px;
-//         margin-right: 12px;
-//     }
-// }
+@media screen and (max-width: 625px) {
+    .infor_item-movie {
+        padding: 12px;
+    }
+    .all_block-zone {
+        flex-direction: column;
+    }
+    .stars_movie-item {
+        padding-left: 0 !important;
+        margin-top: 4px;
+    }
+    .next_icon {
+        right: 2px !important;
+    }
+}
+// Phân trang
+.Pagination_page {
+    margin-top: 10px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-9%);
+}
