--- a/src/Page/TrashEmployee/TrashEmployee.module.scss
+++ b/src/Page/TrashEmployee/TrashEmployee.module.scss
@@ -1,10 +1,13 @@
 .trash_container {
     margin-top: 70px;
+
     width: 1024px;
+
+    border: 1px solid black;
     margin: 100px auto 0 auto;
     border-radius: 5px;
-    padding: 10px 0;
-    background-color: #fff;
+    padding: 20px;
+    background-color: beige;
 }
 .list_film {
     display: flex;
