--- a/src/Page/CreatEmployee/CreatEmployee.module.scss
+++ b/src/Page/CreatEmployee/CreatEmployee.module.scss
@@ -1,6 +1,6 @@
 .create_film {
-    width: 1000px;
-    position: fixed;
+    width: 500px;
+    position: relative;
     overflow: hidden;
     border: 1px solid black;
     top: 80px;
@@ -21,6 +21,17 @@
 
     .form_block-2 {
         padding-left: 15px;
+    }
+}
+@media screen and (max-width: 530px) {
+    .form_block {
+        flex-direction: column;
+        .form_block-2 {
+            padding-left: 0;
+        }
+    }
+    .create_film {
+        width: 300px;
     }
 }
 .block_submit {
