--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -125,6 +125,7 @@
             align-items: center;
             .clock_icons {
                 color: #aaaaaa;
+                margin-top: 4px;
                 margin-right: 4px;
             }
 
@@ -154,7 +155,7 @@
     }
 }
 
-@media screen and (max-width: 625px) {
+@media screen and (max-width: 875px) {
     .infor_item-movie {
         padding: 12px;
     }
