--- a/src/Page/CreatEmployee/CreatEmployee.module.scss
+++ b/src/Page/CreatEmployee/CreatEmployee.module.scss
@@ -1,5 +1,5 @@
 .create_film {
-    width: 500px;
+    width: 80%;
     position: relative;
     overflow: hidden;
     border: 1px solid black;
@@ -29,9 +29,6 @@
         .form_block-2 {
             padding-left: 0;
         }
-    }
-    .create_film {
-        width: 300px;
     }
 }
 .block_submit {
