--- a/src/Page/TrashEmployee/TrashEmployee.module.scss
+++ b/src/Page/TrashEmployee/TrashEmployee.module.scss
@@ -1,12 +1,9 @@
 .trash_container {
-    margin-top: 70px;
-
-    width: 1024px;
+    max-width: 1200px;
 
     border: 1px solid black;
-    margin: 100px auto 0 auto;
+    margin: 80px auto 60px auto;
     border-radius: 5px;
-    padding: 20px;
     background-color: beige;
 }
 .list_film {
