--- a/src/Components/Layout/DefaultLayout/Footer/footer.module.scss
+++ b/src/Components/Layout/DefaultLayout/Footer/footer.module.scss
@@ -1,4 +1,38 @@
-.container {
-    width: 100%;
-    height: 500px;
+.footer {
+    position: relative;
+    max-width: 100%;
+    bottom: 0;
+    left: 0;
+    max-height: 306px;
+    box-shadow: 0 0 5px #aaaaaa;
+}
+.footer_container {
+    max-width: 1200px;
+    padding: 20px 0;
+    margin: 0 auto;
+}
+.title_film {
+    color: red;
+    font-size: 18px;
+    font-weight: 700;
+}
+.select_item {
+    text-decoration: none;
+    color: #666666;
+    margin-top: 10px;
+}
+.contact_to {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 10%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+
+    a {
+        color: black;
+        font-size: 20px;
+        margin-right: 10px;
+    }
 }
