--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -40,6 +40,7 @@
 
     // Accounts
     .account_box {
+        cursor: pointer;
         width: 40px;
         height: 40px;
         background-color: transparent;
