--- a/src/Page/CreatEmployee/CreatEmployee.module.scss
+++ b/src/Page/CreatEmployee/CreatEmployee.module.scss
@@ -1,14 +1,8 @@
 .create_film {
-    width: 80%;
-    position: relative;
-    overflow: hidden;
+    max-width: 1200px;
     border: 1px solid black;
-    top: 80px;
-    left: 50%;
-    right: 50%;
-    transform: translateX(-50%);
-    border-radius: 5px;
     background-color: beige;
+    margin: 80px auto 60px auto;
 }
 
 .container_form {
