--- a/src/Page/EmployeeCategory/EmployeeCategory.module.scss
+++ b/src/Page/EmployeeCategory/EmployeeCategory.module.scss
@@ -1,20 +1,140 @@
-.container {
-    width: 1024px;
-    margin: 100px auto 0 auto;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.container_content {
+.container_category {
+    max-width: 1200px;
+    padding-top: 20px;
+    margin: 62px auto 0 auto;
+}
+
+// Movie Item
+.item_movie {
+    text-decoration: none;
+    display: block;
     width: 100%;
-    padding-left: 0;
-    padding-right: 0;
+    height: 544px;
+    box-shadow: 0 0 5px #aaaaaaaa;
 }
-.Row_content {
+.item_movie:hover {
+    box-shadow: 0 0 20px #aaaaaaaa;
+}
+.item_movie:hover .image_movie {
+    transform: scale(1.1);
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.item_image {
     width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+    height: 423px;
+    overflow: hidden;
+    .image_movie {
+        width: 100%;
+        height: 100%;
+        transition: all 0.2s ease-in-out;
+        object-fit: cover;
+    }
 }
-.Pagination_page {
-    margin-top: 10px;
+
+.infor_item-movie {
+    padding: 24px;
+    .title_movie-item {
+        font-size: 18px;
+        font-weight: 700;
+        width: 120px;
+        white-space: nowrap;
+        -webkit-line-clamp: 1; /* số dòng hiển thị */
+        -webkit-box-orient: horizontal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: #333;
+        margin-bottom: 0;
+        line-height: 18px;
+    }
+    .actor_movie-item {
+        font-size: 14px;
+        color: #aaaaaa;
+        font-weight: 500;
+        line-height: 16px;
+    }
+}
+
+// Time and Stars
+.time_zone-item {
+    display: flex;
     position: relative;
-    left: 50%;
-    transform: translateX(-9%);
+    padding-top: 10px;
+    padding-left: 2px;
+    align-items: center;
+
+    .all_block-zone {
+        display: flex;
+
+        .time_item {
+            display: flex;
+            align-items: center;
+            .clock_icons {
+                color: #aaaaaa;
+                margin-top: 4px;
+                margin-right: 4px;
+            }
+
+            .time {
+                margin-top: 2px;
+                font-size: 14px;
+                color: #aaaaaa;
+                font-weight: 550;
+            }
+        }
+    }
+
+    .stars_movie-item {
+        display: flex;
+        padding-left: 16px;
+        align-items: center;
+
+        .star_icon {
+            font-size: 12px;
+            color: #ffcc00;
+        }
+    }
+    .next_icon {
+        position: absolute;
+        right: -12px;
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .infor_item-movie {
+        padding: 12px;
+    }
+    .all_block-zone {
+        flex-direction: column;
+    }
+    .stars_movie-item {
+        padding-left: 0 !important;
+        margin-top: 4px;
+    }
+    .next_icon {
+        right: 2px !important;
+    }
+}
+// Phân trang
+.Pagination_page {
+    margin: 20px 0;
+    position: relative;
+    .item_Pagi {
+        margin: 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
