--- a/src/Page/FirstPage/FirstPage.module.scss
+++ b/src/Page/FirstPage/FirstPage.module.scss
@@ -1,6 +1,5 @@
 .container {
     width: 100%;
-    position: fixed;
     height: 630px;
     margin-top: 61px;
 }
@@ -15,10 +14,10 @@
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 50px;
+    bottom: 100px;
     transform: translateX(-50%);
     background-color: black;
-    width: 200px;
+    width: 150px;
     height: 50px;
     border-radius: 5px;
     align-items: center;
@@ -26,9 +25,21 @@
     color: #fff;
     font-weight: 700;
     padding-top: 14px;
+    transition: background 0.3s;
+
     cursor: pointer;
 }
+@keyframes fadeTo {
+    from {
+        width: 150px;
+    }
+    to {
+        width: 200px;
+    }
+}
 .btn_next-main:hover {
+    width: 200px;
+    animation: fadeTo ease-in-out 0.5s;
     background-color: red;
     color: #fff;
 }
