--- a/src/Page/ListEmployee/ListEmployee.module.scss
+++ b/src/Page/ListEmployee/ListEmployee.module.scss
@@ -1,15 +1,8 @@
 .list_film {
-    width: 80%;
-    position: relative;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 550px;
-    margin-top: 20px;
     border: 1px solid black;
-    border-radius: 5px;
     background-color: beige;
-    padding: 20px 0;
+    max-width: 1200px;
+    margin: 80px auto 60px auto;
 }
 .Request_film {
     display: flex;
@@ -68,12 +61,18 @@
     width: 200px;
     margin: 0 10px;
 }
+// Phan trang
 .Pagination_page {
-    margin-top: 10px 0;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    margin: 20px 0;
+    position: relative;
+    .item_Pagi {
+        margin: 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
+
 // Button xóa trong bảng
 .btn_delete {
     border: none;
@@ -90,8 +89,7 @@
 // Độ rộng mobile
 @media screen and (max-width: 734px) {
     .list_film {
-        height: 810px;
-        position: relative;
+        height: 900px;
     }
     .modal_request {
         display: flex;
