Optimal Code with Function Component

--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -15,328 +15,14 @@
     display: flex;
     margin: 0 auto;
     width: 1200px;
-    justify-content: space-around;
-}
-.option_left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .title_film {
-        font-size: 18px;
-        color: #ff0000;
-        font-weight: 700;
-        text-decoration: none;
-    }
+    justify-content: space-between;
 }
 
-.nav_bar-option {
-    display: flex;
-}
-.option_PC-right {
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    // Accounts
-    .account_box {
-        cursor: pointer;
-        width: 40px;
-        overflow: hidden;
-        height: 40px;
-        background-color: transparent;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        align-items: center;
-        border: 1px solid #eee;
-        box-shadow: 0 0 5px #aaaaaa;
-        .icon_account {
-            color: #ccc;
-            font-size: 20px;
-        }
-    }
-}
-.login_to-account {
-    display: flex;
-    align-items: center;
-    p {
-        margin: 0;
-        padding: 0;
-        margin-right: 10px;
-    }
-}
-.image_account {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.List_item-classify {
-    display: flex;
-    padding-top: 11px;
-    margin-left: 20px;
-    align-items: center;
-    list-style: none;
-    color: #666666;
-
-    li {
-        margin-top: 8px;
-        margin-left: 20px;
-        text-align: center;
-        align-items: center;
-        transition: color 0.3s, background 0.3s;
-        border-bottom-left-radius: 25px;
-        border-bottom-right-radius: 25px;
-        border-top-left-radius: 25px;
-        border-top-right-radius: 25px;
-    }
-
-    li:hover {
-        background-color: #ffcc00;
-    }
-    li:hover a {
-        color: #fff;
-    }
-}
-.item_link-classify {
-    color: #666666;
-    text-decoration: none;
-    list-style: none;
-    letter-spacing: 1px;
-    padding: 5px 10px;
-    line-height: 14px;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
-    font-weight: 600;
-}
-.name_option {
-    margin-left: 6px;
-}
-
-// .menu_settings {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     text-align: center;
-//     margin-right: 100px;
-
-//     button {
-//         background-color: transparent;
-//         border: none;
-//     }
-// }
-
-.bar_settings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-// Icon Bars
-.bar_menu {
-    margin-left: 36px;
-    background-color: transparent;
-    width: 30px;
-    margin-top: 2px;
-    border: none;
-    outline: none;
-}
-.icon-bars {
-    font-size: 25px;
-    color: #666666;
-}
-.Menu_settings-box {
-    width: 150px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    border: 1px solid #bfbfbf;
-    background-color: white;
-    box-shadow: 10px 10px 5px #aaaaaa;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.menu_setting-item {
-    text-decoration: none;
-    padding: 5px 10px;
-    color: black;
-}
-.menu_setting-item:hover {
-    background-color: #ccc;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.bar_menu-icon {
-    font-size: 25px;
-    margin-top: 18px;
-    display: none;
-}
 // media screen
 @media screen and (max-width: 1080px) {
-    .nav_mobile {
-        display: block;
-    }
     .navbar_film {
         position: relative;
         display: flex;
         align-items: center;
-        .option_left {
-            position: absolute;
-            left: 10px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding-bottom: 6px;
-            .title_film {
-                margin-top: 16px;
-            }
-        }
-
-        .option_PC-right {
-            display: flex;
-            position: absolute;
-            right: 10px;
-            bottom: -20px;
-        }
-        .bar_menu-icon {
-            cursor: pointer;
-            display: block;
-            margin-bottom: 10px;
-        }
-    }
-    .nav_bar-option {
-        display: none;
-    }
-
-    .title_film {
-        margin-right: 20px;
-        margin-bottom: 10px;
-    }
-}
-
-// Hiển thị trên mobile
-.nav_mobile {
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    padding: 20px 0;
-    z-index: 300;
-    background-color: #fff;
-    box-shadow: 10px 10px 5px #aaaaaa;
-    width: 280px;
-    height: 1320px;
-    animation: fadeIn ease-in-out 0.8s;
-
-    .search_mobile {
-        position: relative;
-        top: 50px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-    }
-
-    .List_item-mobile {
-        margin-top: 100px;
-        display: flex;
-        padding-left: 10px;
-        padding-top: 0;
-        padding-right: 0;
-        padding-bottom: 0;
-        width: 100%;
-        flex-direction: column;
-        list-style: none;
-
-        li {
-            width: 100%;
-            height: 40px;
-            line-height: 40px;
-        }
-
-        li:hover .item_link-mobile {
-            color: #ffcc00;
-        }
-    }
-
-    .item_link-mobile {
-        position: relative;
-        color: #666666;
-        text-decoration: none;
-        list-style: none;
-        font-weight: 700;
-        letter-spacing: 1px;
-
-        line-height: 14px;
-        font-size: 14px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        cursor: pointer;
-
-        .name_option {
-            position: absolute;
-            left: 28px;
-        }
-    }
-}
-// Title và Bar icon
-.info_mobile {
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    .title_film {
-        position: absolute;
-        left: 10px;
-        text-decoration: none;
-        color: red;
-        font-weight: 700;
-    }
-    .close_icon {
-        position: absolute;
-        right: 10px;
-        cursor: pointer;
-        font-size: 25px;
-    }
-}
-
-// Lớp phủ
-.modal_shadows {
-    position: fixed;
-    top: 0;
-    z-index: 200;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #333;
-    opacity: 0.5;
-}
-
-@keyframes fadeIn {
-    from {
-        left: -300px;
-    }
-    to {
-        right: 0;
     }
 }
