--- a/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
+++ b/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
@@ -1,21 +1,20 @@
-.form {
-    width: 400px;
+.form_container {
+    max-width: 400px;
+    margin-top: 100px;
+    margin-bottom: 80px;
+    margin-left: auto;
+    margin-right: auto;
     height: 450px;
     background-color: #fff;
     border-radius: 5px;
-    position: fixed;
     display: flex;
     z-index: 500;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     flex-direction: column;
     animation: fadeIn ease-in-out 0.8s;
     padding: 20px 40px;
     border: 1px solid #eee;
     box-shadow: 0 0 20px #aaaaaa;
 }
-
 @keyframes fadeIn {
     from {
         opacity: 0;
