--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -26,3 +26,54 @@
         align-items: center;
     }
 }
+.account_login {
+    p {
+        margin-right: 10px;
+        margin-top: 18px;
+    }
+
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+
+    img {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+}
+
+// Account Menu Login
+
+.Menu_settings-box {
+    width: 150px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    border-radius: 5px;
+    border: 1px solid #bfbfbf;
+    background-color: white;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    animation: fadeIn ease-in-out 0.3s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.menu_setting-item {
+    text-decoration: none;
+    padding: 5px 10px;
+    color: black;
+}
+.menu_setting-item:hover {
+    background-color: #ccc;
+}
