CheckCurrent User and Update when loading page

--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -25,6 +25,9 @@
         display: flex;
         align-items: center;
     }
+    .account_login {
+        padding-right: 10px;
+    }
 }
 .account_login {
     p {
