--- a/src/Page/MovieDetail/MovieDetail.module.scss
+++ b/src/Page/MovieDetail/MovieDetail.module.scss
@@ -1,166 +1,326 @@
 .DetailFilm {
-    border-radius: 5px;
+    max-width: 1400px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
     overflow: hidden;
-    width: 1024px;
-    margin: auto;
-    padding: 0 15px;
-    margin-top: 70px;
     display: flex;
+    min-height: 185vh;
+    flex-direction: column;
 }
-.content {
-    width: 670px;
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #1a1a1a;
-    min-height: 200px;
-}
-.content_info {
-    display: flex;
-}
-.image_content {
-    width: 315px;
-    position: relative;
-    height: 420px;
-    border-radius: 5px;
-    overflow: hidden;
+.top_main-image {
+    width: 100%;
 
-    .image {
+    .image_detail {
         width: 100%;
+        max-height: 352px;
         object-fit: cover;
-        height: 100%;
-    }
-    .watch_film {
-        text-decoration: none;
-        color: white;
-        background-color: #d9534f;
-        position: absolute;
-        padding: 10px 12px;
-        border-radius: 5px;
-        left: 50%;
-        bottom: 20px;
-        transform: translateX(-50%);
-    }
-}
-.info_content {
-    padding-left: 20px;
-    h1 {
-        font-size: 26px;
-        color: #fff;
-    }
-    .info_description {
-        font-size: 16px;
-        color: #ccc;
-    }
-}
-.info_status {
-    width: 315px;
-    margin-top: 8px;
-    border-radius: 5px;
-    background-color: #222222;
-    padding: 5px 8px;
-    height: 277px;
-    overflow: auto;
-
-    p {
-        font-size: 14px;
-        margin: 8px;
-        color: #ccc;
-    }
-}
-.info_evaluate {
-    margin-top: 8px;
-    border-radius: 8px;
-    background-color: #222222;
-
-    h2 {
-        color: #d2691e;
-        padding: 5px 8px;
-        font-size: 20px;
-        font-weight: 400;
-    }
-    .list_stars {
-        display: flex;
-        padding-bottom: 8px;
-        padding-left: 8px;
-        padding-right: 8px;
-        font-size: 16px;
-        color: #ea9d00;
-
-        .icon_stars {
-            margin-right: 5px;
-        }
     }
 }
 
-// list_new-film
-.list_new-film {
-    width: 320px;
-    min-height: 500px;
-    max-height: 620px;
-    overflow: auto;
-    padding: 10px;
-    background-color: #1a1a1a;
-    margin-left: 10px;
-    border-radius: 5px;
-}
-
-//Content_newFilm
-
-.Content_newFilm {
-    padding: 8px;
+.content_detail {
+    max-width: 852px;
+    margin-top: -100px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
-    align-items: center;
 
-    img {
-        width: 60px;
-        border-radius: 3px;
-        height: 70px;
+    flex-direction: column;
+    background-color: fff;
+}
+.content_main {
+    display: flex;
+    padding: 0 12px;
+    height: 100%;
+}
+.left_main-content {
+    display: flex;
+    width: 25%;
+    width: 200px;
+    flex-direction: column;
+    .image_content-PC {
+        width: 100%;
+        height: 292px;
         object-fit: cover;
     }
-
-    .info_film {
-        padding-left: 8px;
-        float: left;
-
-        h4 {
-            color: #fff;
-            font-size: 14px;
-        }
-        .info_description {
-            color: #696969;
-            font-size: 12px;
-        }
-    }
-}
-
-// cast_film
-// .cast_film {
-//     width: ;
-// }
-.cast_film {
-    height: 170px;
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #222222;
-
-    .title {
-        color: #ffd700;
-        font-size: 20px;
-    }
-}
-.list_cast {
-    .item_cast {
+    .main-actor_item {
         display: flex;
         flex-direction: column;
-        .image_cast {
-            width: 92px;
-            height: 92px;
-            border-radius: 50%;
+    }
+}
+.right_main-content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-top: 12px;
+    .info {
+        display: flex;
+        justify-content: space-between;
+        .name {
+            padding: 0;
+            color: #fff;
+        }
+
+        .btn_play {
+            text-decoration: none;
+            display: block;
+            cursor: pointer;
+            padding: 5px 20px;
+            border-radius: 20px;
+            height: 40px;
+            border: 2px solid #fff;
+            background: transparent;
+            outline: none;
+            margin-right: 10px;
+            color: #fff;
+        }
+
+        .stars {
+            display: flex;
+            align-items: center;
+            color: #fff;
+            .star_icon {
+                margin-right: 4px;
+                color: yellow;
+            }
+        }
+    }
+    .bottom_content-right {
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        .info_descrip {
+            display: flex;
+            flex-direction: column;
+
+            .title {
+                font-size: 17px;
+                color: darkgoldenrod;
+                font-weight: 700;
+                margin-bottom: 10px;
+            }
+            .description {
+                display: block;
+                margin-bottom: 0;
+                font-size: 16px;
+                display: -webkit-box;
+                height: 16px * 1.3 * 3;
+                line-height: 1.3;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+
+        .founder_movie {
+            display: flex;
+            margin-top: 14px;
+            padding: 0;
+
+            .info_founder {
+                display: flex;
+                flex-direction: column;
+                float: left;
+
+                .title {
+                    font-weight: 600;
+                    color: #808080;
+                    margin-bottom: 10px;
+                }
+
+                .info_content {
+                    display: flex;
+                    align-items: center;
+                    .avatar {
+                        width: 40px;
+                        margin-right: 10px;
+                        height: 40px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+        .info_founder + .info_founder {
+            margin-left: 40px;
+        }
+    }
+}
+
+@media screen and (max-width: 818px) {
+    .top_main-image {
+        position: relative;
+    }
+
+    // Ẩn đi trên màn ảnh nhỏ
+    .left_main-content {
+        display: none;
+    }
+    .right_main-content {
+        padding-left: 10px;
+    }
+
+    // Trên mobile
+    .left_main-content-mobile {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        left: 10px;
+        bottom: 10px;
+
+        .content-img {
+            width: 200px;
+            height: 130px;
             object-fit: cover;
         }
-        .info_cast {
-            color: #1e90ff;
+        .info {
+            padding-left: 30px;
+            .name {
+                padding: 0;
+                color: #fff;
+            }
+            .stars {
+                display: flex;
+                align-items: center;
+                color: #fff;
+                .star_icon {
+                    margin-right: 4px;
+                    color: yellow;
+                }
+            }
+            .btn_play {
+                text-decoration: none;
+                display: flex;
+                cursor: pointer;
+                justify-content: center;
+                padding: 5px;
+                align-items: center;
+                text-align: center;
+                width: 110px;
+                color: #fff;
+                background-color: #ff9966;
+                margin-top: 10px;
+                transition: background 0.5s;
+
+                span {
+                    margin-left: 2px;
+                }
+            }
+            .btn_play:hover {
+                background-color: #ee0000;
+            }
         }
+    }
+}
+@media screen and (max-width: 480px) {
+    .left_main-content-mobile {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        left: 10px;
+        bottom: 10px;
+
+        .content-img {
+            display: none;
+        }
+        .info {
+            padding-left: 0;
+            .name {
+                padding: 0;
+                color: #fff;
+            }
+            .stars {
+                display: flex;
+                align-items: center;
+                color: #fff;
+                .star_icon {
+                    margin-right: 4px;
+                    color: yellow;
+                }
+            }
+            .btn_play {
+                border: none;
+                outline: none;
+                cursor: pointer;
+                padding: 5px;
+                text-align: center;
+                align-items: center;
+                color: #fff;
+                background-color: #ff9966;
+                width: 110px;
+                margin-top: 10px;
+                transition: background 0.5s;
+            }
+            .btn_play:hover {
+                background-color: #ee0000;
+            }
+        }
+    }
+    .founder_movie {
+        flex-direction: column;
+
+        .info_founder + .info_founder {
+            margin-left: 0 !important;
+            margin-top: 10px;
+        }
+    }
+}
+
+// View Show Movie
+
+.other_movies {
+    width: 100%;
+
+    margin-top: 16px;
+    padding-top: 16px;
+    border-top: 1px solid #ccc;
+    h4 {
+        font-size: 18px;
+        color: #777777;
+        font-weight: 400;
+        margin-bottom: 12px;
+    }
+
+    .block_btn-load {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+
+    .btn_load-more {
+        text-align: center;
+        padding: 5px 10px;
+        border-radius: 3px;
+        border: none;
+        outline: none;
+        background-color: #ff9966;
+        cursor: pointer;
+        transition: background-color 0.5s;
+    }
+    .btn_load-more:hover {
+        background-color: aquamarine;
+    }
+}
+
+.item_movie {
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 350px;
+    box-shadow: 0 0 5px #aaaaaaaa;
+}
+.item_image {
+    width: 100%;
+    height: 290px;
+    overflow: hidden;
+    .image_movie {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
